@@ -1,7 +1,7 @@
-# This Build.PL for Catmandu-Validator-JSONSchema was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.008.
+# This Build.PL for Catmandu-Validator-JSONSchema was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.015.
 use strict;
 use warnings;
 
 use v5.10.1;
-use Module::Build::Tiny 0.039;
+use Module::Build::Tiny 0.034;
 Build_PL();
